Fixed overlap between dropdown and links-column

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,7 +34,7 @@
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
   /* body sizes */
-  --body-font-size-m: 24px;
+  --body-font-size-l: 24px;
   --body-font-size-m: 22px;
   --body-font-size-s: 18px;
   --body-font-size-xs: 16px;
@@ -248,7 +248,7 @@ main .section {
 
 @media (width >= 900px) {
   .section > div {
-    max-width: 1200px;
+    max-width: 1210px;
     margin: auto;
   }
 }
